# magic-folder

./: .clang-format  .gitignore  .gitmodules  .sample.env  CMakeLists.txt  Cargo.toml  LICENSE  README.md  SystemDesignDiagrams.md  TESTING.md  architecture.md  build.sh  doing  magicrc.json  run_tests.sh  vcpkg.json
.cache/clangd/index/: Base64.h.70B73A6E0F7A8167.idx  chunk.hpp.E67C47A78ECDA8B6.idx  cli_handler.cpp.DA3C28B891046151.idx  cli_handler.hpp.609C21CD1C297507.idx  config.hpp.5FFFD811DE939344.idx  content_extractor.cpp.C71FD0ADB171C1F0.idx  content_extractor.hpp.53852DC47B1EA965.idx  content_extractor.hpp.9C987203F2B6D6D7.idx  content_extractor_factory.cpp.4C37498C194ACBE7.idx  content_extractor_factory.hpp.FEF231A6825B0743.idx  file.hpp.45D3F4C9146AFE4D.idx  file_delete_service.cpp.7C7A3BEBF5ABFBDA.idx  file_delete_service.hpp.A51FE8BFE97E740C.idx  file_info_service.cpp.51823F48FE1D0428.idx  file_info_service.hpp.91A8D908D25D8CB4.idx  file_processing_service.cpp.DD43EE285099A1FF.idx  file_processing_service.hpp.51EE3C2868232317.idx  file_watcher.cpp.0DCDD527166FA7A4.idx  file_watcher.hpp.18C864EDB8C315D5.idx  httplib.h.181781C53ED85CE3.idx  json.hpp.0837A5B4C1E5022C.idx  main.cpp.5D1FE075798F6357.idx  main.cpp.A52DCEEC3C6D2E11.idx  markdown_extractor.hpp.1A3B21B6A7572F61.idx  metadata_store.cpp.0113FAC2A754643A.idx  metadata_store.hpp.66598EFF1DECD41F.idx  ollama.hpp.3657AF17DEADC59E.idx  ollama_client.cpp.81F23C1262F8E0DA.idx  ollama_client.hpp.71DF2E2C6B1EBAAC.idx  plaintext_extractor.hpp.D4D6A5FB3263AAC6.idx  routes.cpp.CEF4502BB0B33FF4.idx  routes.hpp.70F1614B2F840811.idx  search_service.cpp.C0825274C9832860.idx  search_service.hpp.62C1B8D795006E56.idx  server.cpp.1A063AED32BB7158.idx  server.hpp.176A27181B6E4A1A.idx  test_file_delete_service.cpp.6CAF3CDA1F21B006.idx  test_file_info_service.cpp.7BA68151D6767859.idx  test_file_processing_service.cpp.8FE3E80491D9CCF6.idx  test_main.cpp.3A427BA45D8546A1.idx  (+6 more)
crates/magic-api/: Cargo.toml
crates/magic-api/src/: lib.rs  main.rs
crates/magic-api/tests/: api_tests.rs
crates/magic-cli/: Cargo.toml
crates/magic-cli/src/: main.rs
crates/magic-core/: Cargo.toml
crates/magic-core/src/: context_extractor.rs  file_watcher.rs  lib.rs  metadata_store.rs  ollama_client.rs  vector_store.rs
include/magic_api/: config.hpp  routes.hpp  server.hpp
include/magic_cli/: cli_handler.hpp
include/magic_core/: content_extractor.hpp  file_watcher.hpp  metadata_store.hpp  ollama_client.hpp  types.hpp  vector_store.hpp
include/magic_core/async/: ITask.hpp  design.md  file_watcher_service.hpp  process_file_task.hpp  service_provider.hpp  task_factory.hpp  worker.hpp  worker_pool.hpp
include/magic_core/db/: connection_pool.hpp  database_manager.hpp  metadata_store.hpp  pooled_connection.hpp  sqlite_error_utils.hpp  task.hpp  task_queue_repo.hpp  transaction.hpp
include/magic_core/db/models/: task_dto.hpp  task_progress_dto.hpp
include/magic_core/extractors/: content_extractor.hpp  content_extractor_factory.hpp  markdown_extractor.hpp  plaintext_extractor.hpp
include/magic_core/llm/: ollama_client.hpp
include/magic_core/services/: compression_service.hpp  encryption_key_service.hpp  file_delete_service.hpp  file_info_service.hpp  file_processing_service.hpp  index_maintenance_service.hpp  search_service.hpp
include/magic_core/types/: chunk.hpp  file.hpp
include/magic_services/: file_delete_service.hpp  file_info_service.hpp  file_processing_service.hpp  search_service.hpp
include/magic_services/background/: file_watcher_service.hpp  index_maintenance_service.hpp
src/magic_api/: CMakeLists.txt  main.cpp  routes.cpp  server.cpp
src/magic_cli/: CMakeLists.txt  cli_handler.cpp  main.cpp
src/magic_core/: CMakeLists.txt  content_extractor.cpp  file_watcher.cpp  metadata_store.cpp  ollama_client.cpp  types.cpp  vector_store.cpp
src/magic_core/async/: file_watch_service_mac.mm  file_watcher_service.cpp  process_file_task.cpp  task_factory.cpp  worker.cpp  worker_pool.cpp
src/magic_core/db/: connection_pool.cpp  database_manager.cpp  metadata_store.cpp  task_queue_repo.cpp
src/magic_core/extractors/: content_extractor.cpp  content_extractor_factory.cpp  markdown_extractor.cpp  plaintext_extractor.cpp
src/magic_core/llm/: ollama_client.cpp
src/magic_core/services/: compression_service.cpp  encryption_key_service.cpp  file_delete_service.cpp  file_info_service.cpp  file_processing_service.cpp  search_service.cpp
src/magic_services/: CMakeLists.txt  file_delete_service.cpp  file_info_service.cpp  file_processing_service.cpp  search_service.cpp
tests/: CMakeLists.txt  README.md  test_file_delete_service.cpp  test_file_info_service.cpp  test_file_processing_service.cpp  test_main.cpp  test_mocks.hpp  test_search_service.cpp  test_utilities.cpp  test_utilities.hpp
tests/common/: CMakeLists.txt  mocks_test.hpp  utilities_test.cpp  utilities_test.hpp
tests/db/: test_file_delete_service.cpp  test_file_info_service.cpp  test_metadata_store.cpp
tests/extractors/: test_content_extractor.cpp  test_content_extractor_factory.cpp  test_markdown_extractor.cpp  test_plaintext_extractor.cpp
tests/integration/: CMakeLists.txt
tests/unit/: CMakeLists.txt
tests/unit/api/: CMakeLists.txt  config_test.cpp
tests/unit/core/: CMakeLists.txt  file_watcher_service_test.cpp  process_file_task_test.cpp  service_provider_test.cpp  task_factory_test.cpp  worker_pool_test.cpp  worker_test.cpp
tests/unit/db/: CMakeLists.txt  connection_pool_test.cpp  database_manager_test.cpp  file_delete_service_test.cpp  file_info_service_test.cpp  metadata_store_test.cpp  task_repo_test.cpp
tests/unit/extractors/: CMakeLists.txt  content_extractor_factory_test.cpp  content_extractor_test.cpp  markdown_extractor_test.cpp  plaintext_extractor_test.cpp
tests/unit/services/: CMakeLists.txt  compression_service_test.cpp  file_processing_service_test.cpp  search_service_test.cpp
