[package]
name = "magic-api"
version = "0.1.0"
edition = "2024"

[dependencies]
magic-core = { path = "../magic-core" }

tokio = { version = "1", features = ["full"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.5.0", features = ["cors", "trace"] }
chrono = { version = "=0.4.39", features = ["serde"] }