[package]
name = "magic-api"
version = "0.1.0"
edition = "2024"

[dependencies]
magic-core = { path = "../magic-core" }

tokio = { version = "1", features = ["full"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
tempfile = "3.10"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.5.0", features = ["cors", "trace"] }
chrono = { version = "=0.4.39", features = ["serde"] }
reqwest = "0.12.18"
dotenvy = "0.15"
once_cell = "1.21.3"

[dev-dependencies]
tempfile = "3.10"
tokio-test = "0.4"
