[package]
name = "magic-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
magic-core = { path = "../magic-core" }

tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
clap = { version = "4.4", features = ["derive"] } # For CLI argument parsing
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false } # To make requests to magic-api
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
once_cell = "1.21.3"