# Integration tests
# Tests that verify the interaction between multiple components

# Currently no integration tests, but ready for future expansion
# set(INTEGRATION_TEST_SOURCES
#     test_end_to_end_workflow.cpp
#     test_file_processing_pipeline.cpp
#     test_search_integration.cpp
# )

# Placeholder for future integration tests
# add_library(magic_test_integration STATIC ${INTEGRATION_TEST_SOURCES})

# Link against common test utilities and required libraries
# target_link_libraries(magic_test_integration
#     PUBLIC
#         magic_test_common
#         magic_core
#         GTest::gtest
#         GTest::gmock
# )

# Set include directories
# target_include_directories(magic_test_integration
#     PRIVATE
#         ${CMAKE_SOURCE_DIR}/include
#         ${CMAKE_SOURCE_DIR}/tests/common
# )

# Set C++ standard
# target_compile_features(magic_test_integration PUBLIC cxx_std_20)

# Define test targets for integration tests
# add_custom_target(test_integration
#     COMMAND $<TARGET_FILE:magic_folder_tests> --gtest_filter="*IntegrationTest*"
#     DEPENDS magic_folder_tests
#     COMMENT "Running all integration tests"
#     WORKING_DIRECTORY ${CMAKE_BINARY_DIR}
# ) 